project and postman collection updated with challenge 4
